--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -157,5 +157,79 @@
         <p>₹9,999 <b>₹11,999</b> 16% off </p>
         <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
     </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/416/416/k1118cw0/mobile/u/e/p/mi-redmi-8a-mzb8458in-original-imafkznjvkspdayc.jpeg?q=70"
+            alt="kk" height="200px" width="auto" class="ph2">
+        <h4>Redmi 8A (Ocean Blue, 32 GB)  (3 GB RAM)</h4>
+        <p>₹6,999 <b>₹8,999 </b>22% off</p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/416/416/jyg5lzk0/mobile/s/r/k/mi-redmi-7a-mzb7798in-original-imafgzng2pzvnhmf.jpeg?q=70"
+            alt="kk" height="200px" width="auto" class="ph2">
+        <h4>Redmi 7A (Matte Black, 16 GB)  (2 GB RAM)</h4>
+        <p>₹5,999 <b>₹6,999</b> 6% off </p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/416/416/k0lbdzk0pkrrdj/mobile/n/8/h/mi-redmi-note-7s-mzb7742in-original-imafgzbd8rvyf7ms.jpeg?q=70"
+            alt="kk" height="200px" width="auto" class="ph2">
+        <h4>Redmi Note 7S (Sapphire Blue, 64 GB)  (4 GB RAM)</h4>
+        <p>₹9,999 <b>₹13,999</b> 28% off </p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/416/416/k5lcvbk0pkrrdj/mobile-refurbished/5/h/q/redmi-note-8-128-u-m1908c3ji-mi-6-original-imafhgqgvjhkuwwy.jpeg?q=70"
+            alt="kk" height="200px" width="auto" class="ph2">
+        <h4>Redmi Note 8 (Space Black, 128 GB)  (6 GB RAM)</h4>
+        <p>₹13,999 <b>₹15,999</b> 16% off </p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+</div>
+<br>
+<div class="container">
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/800/960/t-shirt/p/m/u/sp-27-alpha-male-3xl-original-imae7ty6mynkanwv.jpeg?q=50"
+            alt="kk" height="180px" width="auto" class="ph3">
+        <br>
+        <h4>Solid Men Polo Neck Grey T-Shirt</h4>
+        <p>₹531 <b>₹1,899</b> 82% off</p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/800/960/jyvvgcw0/t-shirt/n/y/e/xxl-t-12-blk-12-mlg-02-vimal-jonney-original-imafjy6gmgdstdjy.jpeg?q=50"
+            alt="kk" height="180px" width="auto" class="ph3">
+        <h4>Solid Men Hooded Neck Black T-Shirt</h4>
+        <p>₹199 <b>₹999</b> 80% off</p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/800/960/jp780i80/t-shirt/u/8/t/s-tnvhdfulabstract1-tripr-original-imafbdarnwhfh7uu.jpeg?q=50"
+            alt="kk" height="180px" width="auto" class="ph3">
+        <h4>Abstract Men Hooded Neck Dark Blue T-Shirt</h4>
+        <p>₹323 <b>₹899</b> 64% off </p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/800/960/jxgflow0/t-shirt/m/z/k/xl-tblgychkhdful-d24-tripr-original-imafhuzmagqfgnrq.jpeg?q=50"
+            alt="kk" height="180px" width="auto" class="ph3">
+        <h4>Checkered Men Hooded Neck Black, Grey T-Shirt</h4>
+        <p>₹474 <b>₹1,999</b> 68% off</p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/800/960/jw6pifk0/t-shirt/e/v/z/m-61ywn-lewel-original-imafgxd7dfg7uub2.jpeg?q=50"
+            alt="kk" height="180px" width="auto" class="ph3">
+        <h4>Color Block Men Hooded Neck Yellow, White, Blue T-Shirt</h4>
+        <p>₹587 <b>₹1,499</b> 74% off</p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
+    <div class="cardss">
+        <img src="https://rukminim1.flixcart.com/image/800/960/t-shirt/t/q/e/sp-24-alpha-male-xl-original-imae7ty6xcfhfdbz.jpeg?q=50"
+            alt="kk" height="180px" width="auto" class="ph3">
+        <h4>Solid Men Polo Neck Blue T-Shirt</h4>
+        <p>₹588 <b>₹1,431</b> 63% off</p>
+        <button>Buy Now</button>&nbsp;&nbsp;<button class="button2">Add to Cart</button>
+    </div>
 </div>
 <app-footer></app-footer>
