added[lazyloading-images]

--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,3 +1,13 @@
+
+.pw-img {
+    filter: blur(20px);
+    transition: all 500ms ease-in-out;
+}
+
+.loaded {
+    filter: blur(0px);
+}
+
 .container
 {
     /* width: 95%; */
