--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -74,11 +74,16 @@ footer p {
      display:table; 
      margin:15px auto 0 auto;
       list-style-type:none;
-      }
+    }
+    .social_footer_ul li:hover{
+    transform: translateY(-0.25rem);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    }
 .social_footer_ul li { 
     padding-left:20px; 
     padding-top:10px; 
     float:left; 
+    transition: 1s ease-out;
 }
 .social_footer_ul li a {
      color:#CCC; 
