--- a/src/app/carosalimages/carosalimages.component.css
+++ b/src/app/carosalimages/carosalimages.component.css
@@ -35,7 +35,7 @@ marquee{
     cursor: pointer;
 }
 .top:hover{
-    color: pink;
+    color: yellow;
 }
 @media only screen and (max-width: 1200px) {
     img{
