--- a/src/app/carosalimages/carosalimages.component.css
+++ b/src/app/carosalimages/carosalimages.component.css
@@ -46,3 +46,13 @@ marquee{
     }
 }
 
+.login{
+    position: absolute;
+    top: 18px;
+    right: 45%;
+    cursor: pointer;
+    color: yellow;
+    border: 2px solid #dddddd;
+    padding: 5px;
+    border-radius: 4px;
+}
