--- a/src/app/carosalimages/carosalimages.component.html
+++ b/src/app/carosalimages/carosalimages.component.html
@@ -18,8 +18,8 @@
             </div>
         </slide>
         <slide>
-            <img src="https://www.utterweb.com/blog/wp-content/uploads/2016/09/Online-Shopping-Website-1.jpg"
-                alt="third slide" style="display: block; width: 100%;">
+            <img src="https://res.cloudinary.com/twenty20/private_images/t_watermark-criss-cross-10/v1575306115000/photosp/80b4881a-b965-44f1-bca9-bd3528051437/stock-photo-shopping-shop-credit-cards-holiday-shopping-online-shopping-online-purchase-christmas-holidays-shopping-online-retail-shopping-80b4881a-b965-44f1-bca9-bd3528051437.jpg"
+                alt="fdfd slide" style="display: block; width: 100%;">
             <div class="carousel-caption d-none d-md-block">
                 <h3>Online Shopping Made easy</h3>
                 <p>I make a fair amount of my food choices for environmental-type reasons than nutrition or taste. I'm
@@ -48,9 +48,6 @@
     </carousel>
 </div>
 <marquee scrollamount="16">Welcome to Online Shopping</marquee>
-<h5 (click)="logout()" class="login">
-    {{login}}
-</h5>
 <!-- back to top icon -->
 <div *ngIf="isMobileView" class="top" id="top" (click)="backtotop()">
     <i style="font-size: 25px;" class='fas fa-angle-up'></i>
