--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,4 +1,3 @@
-
 .pw-img {
     filter: blur(20px);
     transition: all 500ms ease-in-out;
@@ -8,8 +7,7 @@
     filter: blur(0px);
 }
 
-.container
-{
+.container {
     /* width: 95%; */
     max-width: 1274px !important;
     margin-left: auto;
@@ -21,9 +19,10 @@
     border: 2px solid lightgray;
     border-radius: 4px;
     padding: 10px;
-    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.cardss{
+
+.cardss {
     border: 1px solid lightgray;
     border-radius: 4px;
     padding: 15px;
@@ -32,20 +31,26 @@
     transition: all 0.5s;
     height: 385px;
 }
-.cardss:hover{
-    box-shadow: 6px 6px 20px 10px rgba(0,0,0,.2);
+
+.cardss:hover {
+    /* box-shadow: 6px 6px 20px 10px rgba(0,0,0,.2); */
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19)
 }
-h4{
+
+h4 {
     font-size: large;
 }
-h4:hover{
+
+h4:hover {
     color: blue;
 }
-p{
+
+p {
     font-size: 20px;
     font-family: sans-serif;
 }
-button{
+
+button {
     color: #fff;
     background: #ff9f00;
     border: #ff9f00;
@@ -54,10 +59,12 @@ button{
     width: 46%;
     font-size: 18px;
 }
-b{
+
+b {
     text-decoration: line-through;
 }
-.button2{
+
+.button2 {
     color: #fff;
     background: #fb641b;
     border: #fb641b;
@@ -66,38 +73,41 @@ b{
     width: 50%;
     font-size: 18px;
 }
-.ph1{
+
+.ph1 {
     padding-left: 28px;
 }
-.ph2{
+
+.ph2 {
     padding-left: 31px;
 }
-.ph3{
+
+.ph3 {
     padding-left: 52px;
 }
 
 @media only screen and (max-width: 1200px) {
-    .container{
+    .container {
         width: 95%;
         display: block;
     }
-    .ph1{
+    .ph1 {
         padding-left: 72px;
     }
-    .ph2{
+    .ph2 {
         padding-left: 72px;
     }
-    .ph3{
+    .ph3 {
         padding-left: 85px;
     }
-    .cardss{
+    .cardss {
         width: 350px;
         margin-left: 8px;
     }
-    img{
+    img {
         padding-left: 50px;
     }
-    .image{
+    .image {
         padding-left: 66px;
     }
 }
