--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,107 +1,144 @@
-.col_white_amrc { 
-    color:#FFF;
+.col_white_amrc {
+    color: #FFF;
 }
+
 footer {
-     width:100%; background-color:#263238; min-height:250px; padding:10px 0px 25px 0px ;
-    }
+    width: 100%;
+    background-color: #263238;
+    min-height: 250px;
+    padding: 10px 0px 25px 0px;
+}
+
 .pt2 {
-     padding-top:40px ; margin-bottom:20px ;
-    }
-footer p { 
-    font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;
+    padding-top: 40px;
+    margin-bottom: 20px;
 }
-.mb10 { 
-    padding-bottom:15px ;
+
+footer p {
+    font-size: 13px;
+    color: #CCC;
+    padding-bottom: 0px;
+    margin-bottom: 8px;
 }
-.footer_ul_amrc { 
-    margin:0px ; list-style-type:none ; font-size:14px; padding:0px 0px 10px 0px ; 
+
+.mb10 {
+    padding-bottom: 15px;
 }
+
+.footer_ul_amrc {
+    margin: 0px;
+    list-style-type: none;
+    font-size: 14px;
+    padding: 0px 0px 10px 0px;
+}
+
 .footer_ul_amrc li {
-    padding:0px 0px 5px 0px;
+    padding: 0px 0px 5px 0px;
 }
-.footer_ul_amrc li a{ 
-    color:#CCC;
+
+.footer_ul_amrc li a {
+    color: #CCC;
 }
-.footer_ul_amrc li a:hover{ 
-    color:#fff; 
-    text-decoration:none;
+
+.footer_ul_amrc li a:hover {
+    color: #fff;
+    text-decoration: none;
 }
-.fleft { 
-    float:left;
+
+.fleft {
+    float: left;
 }
-.padding-right { 
-    padding-right:10px;
- }
+
+.padding-right {
+    padding-right: 10px;
+}
 
 .footer_ul2_amrc {
-    margin:0px; list-style-type:none; padding:0px;
-}
-.footer_ul2_amrc li p { 
-    display:table;
- }
-.footer_ul2_amrc li a:hover { 
-    text-decoration:none;
-}
-.footer_ul2_amrc li i { 
-    margin-top:5px;
+    margin: 0px;
+    list-style-type: none;
+    padding: 0px;
 }
 
-.bottom_border { 
-    border-bottom:1px solid #323f45; padding-bottom:20px;
+.footer_ul2_amrc li p {
+    display: table;
 }
+
+.footer_ul2_amrc li a:hover {
+    text-decoration: none;
+}
+
+.footer_ul2_amrc li i {
+    margin-top: 5px;
+}
+
+.bottom_border {
+    border-bottom: 1px solid #323f45;
+    padding-bottom: 20px;
+}
+
 .foote_bottom_ul_amrc {
-	list-style-type:none;
-	padding:0px;
-	display:table;
-	margin-top: 10px;
-	margin-right: auto;
-	margin-bottom: 10px;
-	margin-left: auto;
+    list-style-type: none;
+    padding: 0px;
+    display: table;
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
 }
+
 .foote_bottom_ul_amrc li {
-     display:inline;
-    }
-.foote_bottom_ul_amrc li a { 
-    color:#999; margin:0 12px;
+    display: inline;
+}
+
+.foote_bottom_ul_amrc li a {
+    color: #999;
+    margin: 0 12px;
     cursor: pointer;
 }
-.foote_bottom_ul_amrc li a:hover{
-    color:#fff; 
-    text-decoration:none;
+
+.foote_bottom_ul_amrc li a:hover {
+    color: #fff;
+    text-decoration: none;
 }
 
 .social_footer_ul {
-     display:table; 
-     margin:15px auto 0 auto;
-      list-style-type:none;
-    }
-    .social_footer_ul li:hover{
-    transform: translateY(-0.25rem);
+    display: table;
+    margin: 15px auto 0 auto;
+    list-style-type: none;
+}
+
+.social_footer_ul li:hover {
+    transform: translateY(-0.55rem);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    }
-.social_footer_ul li { 
-    padding-left:20px; 
-    padding-top:10px; 
-    float:left; 
+}
+
+.social_footer_ul li {
+    padding-left: 20px;
+    padding-top: 10px;
+    float: left;
     transition: 1s ease-out;
 }
+
 .social_footer_ul li a {
-     color:#CCC; 
-     border:1px solid #CCC;
-      padding:8px;
-      border-radius:50%;
-    }
-.social_footer_ul li a:hover{
-    color:#fb0; 
-    border:1px solid #fb0;
+    color: #CCC;
+    border: 1px solid #CCC;
+    padding: 8px;
+    border-radius: 50%;
 }
 
-.social_footer_ul li i { 
-     width:20px; height:20px; text-align:center;
+.social_footer_ul li a:hover {
+    color: #fb0;
+    border: 1px solid #fb0;
 }
 
-@media only screen and (max-width:1200px){
-    .foote_bottom_ul_amrc{
+.social_footer_ul li i {
+    width: 20px;
+    height: 20px;
+    text-align: center;
+}
+
+@media only screen and (max-width:1200px) {
+    .foote_bottom_ul_amrc {
         display: none;
     }
 }
